# reklama-tozalovchi-bot

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.web  PLAN.md  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  keywords.md  pyproject.toml
api/: config.py  deps.py  main.py
api/auth/: deps.py  router.py
api/routers/: activity.py  audit.py  cases.py  dashboard.py  enforcement.py  events.py  groups.py  health.py  indicators.py  officers.py  reports.py  users.py
api/schemas/: activity.py  auth.py  cases.py  dashboard.py  enforcement.py  events.py  groups.py  indicators.py  officers.py  users.py
app/: config.py  logging_config.py  main.py
app/ai/: __init__.py  models.py  providers.py  service.py
app/bot/: commands.py  filters.py  keyboards.py  middlewares.py
app/core/: logging.py
app/database/: __init__.py  models.py  secadmin_base.py  secadmin_models.py  session.py
app/detector/: extractor.py  models.py  normalizer.py  phrases.py  scoring.py  security.py  service.py
app/handlers/: commands.py  edited_messages.py  members.py  membership.py  messages.py  private.py
app/i18n/: __init__.py  uz.py
app/secadmin/: worker.py
app/services/: allowlist.py  cleanup.py  enforcement_bridge.py  moderation.py  notifications.py  observation.py  permissions.py
app/utils/: telegram.py  time.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0003_secadmin.py  0004_activity_capture.py  0005_recent_message_export.py
nginx/: public.conf
scripts/: create_roles.sql  seed_officer.py
tests/: conftest.py
tests/integration/: conftest.py  test_allowlist_repository.py  test_chats_repository.py  test_deletion_logs_repository.py
tests/unit/: test_ai_models.py  test_ai_providers.py  test_ai_service.py  test_api_login.py  test_detector_service.py  test_enforcement_bridge.py  (+3 more)
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+41 files in other folders)
