[project]
name = "adcleaner"
version = "1.0.0"
description = "Telegram bot that detects and deletes unauthorized advertisements in groups"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.15.0,<4.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic-settings>=2.7.0,<3.0.0",
    "pydantic>=2.10.0,<3.0.0",
    'eval_type_backport; python_version < "3.10"',
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    'eval_type_backport; python_version < "3.10"',
]
dev = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "ruff>=0.8.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "api*"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
per-file-ignores = {"api/*" = ["B008"]}

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
